Version 1.1.38 (#68)
* Version 1.1.38

- Docs for Confluent Interceptors monitoring

* circli use latest Python

* Switch to metric store

* Work in progress

* Fix Issue #64

- Missing double quotes in the flush interval telegraf config UI generator #64

* Interceptors work in progress

* Fix Issue #66

- Missing dot in telegraf config for Kafka Connect #66

* Work in progress

* Version 1.1.38

- Feature: Integration with Confluent Interceptor Monitoring for producers and consumers advanced lag monitoring with Confluent
- Change: Kafka Smart Monitoring goes Dark theme!
- Change: When no Kafka Connect source or sink connector have been detected, show the aggregated single form in black rather than yellow
- Fix: Issue #64 - mMissing double quotes in the flush interval telegraf config UI generator #64
- Fix: Issue #66 - Missing dot in telegraf config for Kafka Connect #66

* gitignore, appinspect

* Final release

* docs update

* fix in props.conf for interceptor

* Final release

* last fix

* Fix Issue ##67

* Version 1.1.38

* fix props.conf

* optimized props

* fixing yaml docker-compose

* minor improvement

* extend troubleshooting

* docs under review

* docs